--- a/asset/sass/components/linked-resources/_linked-resources.scss
+++ b/asset/sass/components/linked-resources/_linked-resources.scss
@@ -27,33 +27,34 @@
         }
     }
 
-    .resource-tag {
-        margin-bottom: 0;
+    .resource-tags {
+        margin-bottom: 10px;
     }
 
     .linked-resource {
         display: flex;
-        align-items: flex-start;
-        flex-direction: column-reverse;
+        flex-wrap: nowrap;
+        gap: 15px;
         justify-content: space-between;
-        padding: 0.7rem 0;
-
-        @media (min-width: $lg) {
-            align-items: center;
-            flex-direction: row;
-        }
+        padding: 1rem 0;
+        border-bottom: 1px dashed $color__hr;
 
         &:last-child {
             border-bottom: none;
         }
 
-        .resource-tags {
-            margin-bottom: 1rem;
-            margin-left: -10px;
-
-            @media (min-width: $lg) {
-                margin: 0;
-            }
+        img {
+            border-radius: 10px 0 !important;
+            height: 50px;
+            object-fit: cover;
+            width: 50px;
         }
+    }
+
+    .resource__thumbnail {
+        flex-shrink: 0;
+        line-height: 1;
+        margin-left: auto;
+        order: 1;
     }
 }
